--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
 				}
 				xdr.open("GET", URL);
 				xdr.setRequestHeader("Origin","http://apisearch.herokuapp.com/");
+				xdr.setRequestHeader("Content-Type", "application/json; charset=UTF-8");
 				xdr.send(); 
 			});
 		});
