--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 				    alert(xdr.responseText);
 				}
 				xdr.open("GET", URL);
-				xdr.setRequestHeader("Origin","http://apisearch.herokuapp.com/");
+				xhr.setRequestHeader("Origin", "http://apisearch.herokuapp.com");
 				xdr.setRequestHeader("Content-Type", "application/json; charset=UTF-8");
 				xdr.send(); 
 			});
